tests/error/array_errors/subscript_after_use.err
Error: Copy violation (at $FILE:12:19)
   | 
10 | @guppy
11 | def main(qs: array[qubit, 42] @owned) -> array[qubit, 42]:
12 |     return foo(qs, qs[0])
   |                    ^^ Variable `qs` with non-copyable type `array[qubit, 42]`
   |                       cannot be borrowed ...

Note:
   | 
11 | def main(qs: array[qubit, 42] @owned) -> array[qubit, 42]:
12 |     return foo(qs, qs[0])
   |                -- Variable `qs` already consumed here

Guppy compilation failed due to 1 previous error
